2010-08-06  Sergio Martin <sergio.martin@artica.es>

	* include/functions_alerts.php
	godmode/alerts/alert_actions.php: Added the duplicate alert  action
	feature for pending task 3038715

2010-08-04  Miguel de Dios  <miguel.dedios@artica.es>
	* include/functions_filemanager.php: added parameter $readOnly in the
	function "file_explorer".
	
	*pandoradb.sql, extras/pandoradb_migrate_v3.1_to_v3.2.sql: added into the
	table "talert_template_modules" the column "id_policy_alerts".
	
2010-08-05  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/networkmap.php: Change the default map to topology map

2010-08-04  Miguel de Dios  <miguel.dedios@artica.es>
	* include/functions_filemanager.php: move the action messages to $config
	intermediate var. 
	
	* godmode/setup/file_manager.php: added the message of action with the
	filemanager.

2010-08-04  Sergio Martin <sergio.martin@artica.es>

	* include/functions_reporting.php: Fixed the get_agent_module_info function
	for avoid to show the disabled modules information

2010-08-04  Sergio Martin <sergio.martin@artica.es>

	* images/status_sets/default/module_no_data_ball.png: Added a image
	to modules without data

2010-08-04  Sergio Martin <sergio.martin@artica.es>

	* include/styles/pandora.css
	include/functions_reporting.php
	include/functions_ui.php
	include/functions_db.php
	operation/agentes/status_monitor.php
	operation/agentes/estado_agente.php
	operation/agentes/bulbs.php
	operation/agentes/estado_monitores.php
	operation/agentes/group_view.php
	images/status_sets/default/module_no_data.png
	images/status_sets/default/alert_fired.png
	images/status_sets/default/agent_no_monitors.png
	images/status_sets/default/alert_fired_ball.png
	images/status_sets/default/agent_no_monitors_ball.png
	images/status_sets/default/agent_down_ball.png
	images/status_sets/default/agent_down.png: Fixed several modules
	and agents list status to use the new unknown status. Some images was