@@ -1,3 +1,12 @@
+2010-08-09  Sergio Martin <sergio.martin@artica.es>
+
+	* operation/agentes/agents_modules_view.php
+	operation/agentes/tactical.php
+	operation/agentes/group_view.php
+	operation/menu.php: Added the agents VS modules matrix
+	and changed the color of some alert fired numbers and 
+	table rows
+
 2010-08-06  Sergio Martin <sergio.martin@artica.es>
 
 	* include/functions_alerts.php
